[tool.poetry]
name = "rsa-salaaja"
version = "0.1.0"
description = ""
authors = ["Juho <JuhoPaananen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rsa_salaaja"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
